force-app/main/default/objects/Zip_Code__c/fields/ADR__c.field-meta.xml
<CustomField>
    <fullName>ADR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes6</relationshipName>
    <type>Lookup</type>
</CustomField>