force-app/main/default/objects/Zip_Code__c/fields/AE2__c.field-meta.xml
<CustomField>
    <fullName>AE2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes4</relationshipName>
    <type>Lookup</type>
</CustomField>