force-app/main/default/objects/Zip_Code__c/fields/BDR__c.field-meta.xml
<CustomField>
    <fullName>BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes5</relationshipName>
    <type>Lookup</type>
</CustomField>