force-app/main/default/objects/Zip_Code__c/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>