force-app/main/default/objects/Zip_Code__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>PNW</fullName>
            </value>
            <value>
                <fullName>West/Southwest</fullName>
            </value>
            <value>
                <fullName>Great Plains/Mountain</fullName>
            </value>
            <value>
                <fullName>South Central</fullName>
            </value>
            <value>
                <fullName>Blueridge</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>New England</fullName>
            </value>
            <value>
                <fullName>NY Metro</fullName>
            </value>
            <value>
                <fullName>Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>Mid South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>