force-app/main/default/objects/Zip_Code__c/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>