force-app/main/default/objects/Zip_Code__c/fields/Zip_Code_Split__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Split__c</fullName>
    <label>Zip Code Split</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Northern California</fullName>
            </value>
            <value>
                <fullName>Southern California</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>