force-app/main/default/objects/Zip_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Region__c</columns>
    <columns>State__c</columns>
    <columns>AE__c</columns>
    <columns>SA__c</columns>
    <columns>ADR__c</columns>
    <columns>Zip_Code_Split__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>